Fix messed up scrollbar in lyrics applet under KDE 4.4

BUG: 222260